--- a/index.html
+++ b/index.html
@@ -7,65 +7,119 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <style>
+    #logo {
+      display: block;
+      background-color: #cd3724;
+      background-image: url(/assets/img/red-bkg.png) repeat;
+      background-image: url(/assets/img/head-plo-radialgrad.png),url(/assets/img/red-bkg.png);
+      background-repeat: no-repeat,repeat;
+      background-position: top right, center center;
+      padding: 8px 0;
+      margin-bottom: 18px;
+    }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-38348457-7', 'stampr.github.io');
+    ga('send', 'pageview');
+
+    </script>
     <div class="wrapper">
       <header>
-        <h1>stampr postal mail api</h1>
-        <p>Send real postal mail online via stampr using the public api!</p>
 
-        <p class="view"><a href="https://github.com/stampr/stampr-api">View the Project on GitHub <small>stampr/stampr-api</small></a></p>
+        <a id="logo" href="https://stam.pr/"><img src="https://stam.pr/assets/img/logo-lg-centered.png" alt="stampr"></a>
+        <h1>stampr api</h1>
+        <p>Send real postal mail online using the RESTful stampr api</p>
 
+        <h3>API Documentation</h3>
+        <p class="view"><a href="https://github.com/stampr/stampr-api">View API documentation on GitHub <small>stampr/stampr-api</small></a></p>
 
+        <h2>Clients</h2>
+        <p>A number of wrappers exist in varying degrees of completion &mdash; MIT licensed and ready to be forked!</p>
+        <h3>PHP</h3>
         <ul>
-          <li><a href="https://github.com/stampr/stampr-api/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/stampr/stampr-api/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/stampr/stampr-api">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-php/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-php/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-php">View On <strong>GitHub</strong></a></li>
         </ul>
+
+        <h3>.NET/C#</h3>
+        <ul>
+          <li><a href="https://github.com/stampr/stampr-api-csharp/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-csharp/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-csharp">View On <strong>GitHub</strong></a></li>
+        </ul>
+
+        <h3>Ruby</h3>
+        <ul>
+          <li><a href="https://github.com/stampr/stampr-api-ruby/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-ruby/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-ruby">View On <strong>GitHub</strong></a></li>
+        </ul>
+
+        <h3>Python</h3>
+        <ul>
+          <li><a href="https://github.com/stampr/stampr-api-python/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-python/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-python">View On <strong>GitHub</strong></a></li>
+        </ul>
+
+        <h3>Java</h3>
+        <ul>
+          <li><a href="https://github.com/stampr/stampr-api-java/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-java/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stampr/stampr-api-java">View On <strong>GitHub</strong></a></li>
+        </ul>
+
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h3>What is stampr?</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>First and foremost, <a href="https://stam.pr/">stampr</a> is the coolest thing to happen to postal mail since the pony express.</p>
+<p>We turn the clumsy and error-prone process of sending a letter into something as easy to use as sending an email -- and our API strives to be the same.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>Enough talk, let's see it in action.  Here's an example of sending a mailing with the PHP client:</p>
+<pre><code>$stampr = new Stampr([email], [password]);
+$mailing = $stampr->mail($to_address, $from_address, $message);
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>That's easy!</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h3>Clients</h3>
+<p>Use the links on the left to learn more about a respective client.  Currently available:</p>
+<ul>
+  <li>PHP</li>
+  <li>.NET/C#</li>
+  <li>Ruby</li>
+  <li>Python</li>
+  <li>Java</li>
+</ul>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Documentation</h3>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>The documentation for the entire API is available <a href="https://github.com/stampr/stampr-api">here</a>, and each individual project documents all the necessary bits in their respective readme.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>Support or Contact</h3>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>If you're having a problem with a particular client, please report it as an issue in their respective github repo, or contact us at <a href="mailto:help@stam.pr">help@stam.pr</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/stampr">stampr</a></p>
+        <p>This project is maintained by <a href="https://github.com/stampr">stampr</a>.<br>&copy; 2013 stampr LLC</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
