fixed asset urls

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     #logo {
       display: block;
       background-color: #cd3724;
-      background-image: url(/assets/img/red-bkg.png) repeat;
-      background-image: url(/assets/img/head-plo-radialgrad.png),url(/assets/img/red-bkg.png);
+      background-image: url(https://stam.pr/assets/img/red-bkg.png) repeat;
+      background-image: url(https://stam.pr/assets/img/head-plo-radialgrad.png),url(/assets/img/red-bkg.png);
       background-repeat: no-repeat,repeat;
       background-position: top right, center center;
       padding: 8px 0;
