--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 
       </header>
       <section>
+      <a style="border-radius:6px;display:block;background:#e0e0e0;padding:20px;text-align:center;text-decoration:underline;font-weight:bold;" href="http://mailcogs.tumblr.com/post/76933733301/stampr-api-hello-world-with-php">Check out the Stampr API Hello World tutorial!</a>
+      </section>
+      <section>
         <h3>What is stampr?</h3>
 
 <p>First and foremost, <a href="https://stam.pr/">stampr</a> is the coolest thing to happen to postal mail since the pony express.</p>
